Login dialog upgrades; Expand / Collapse TextArea fields on EditRowDialog; Fix for live reload data on EditRowDialog when data is updated on server

--- a/src/components/BrowserMenu/BrowserMenu.scss
+++ b/src/components/BrowserMenu/BrowserMenu.scss
@@ -111,6 +111,20 @@
 
   &.active {
     background: $blue;
+
+    &:hover {
+      background: white;
+      color: $blue;
+    }
+  }
+
+  &.greenActive {
+    background: $green;
+
+    &:hover {
+      background: white;
+      color: $blue;
+    }
   }
 }
 
